# API-workshop

./: README.md  main.py  pyproject.toml  requirements-dev.txt  testes.py
.github/workflows/: main.yml
